--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "brozot/laravel-fcm": "^1.3",
         "edujugon/push-notification": "^v3.0.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
