--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,13 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "brozot/laravel-fcm": "^1.3",
-        "edujugon/push-notification": "^v3.0.0",
+        "edujugon/push-notification": "^4.0",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/passport": "^7.0",
+        "laravel/framework": "^6.0",
+        "laravel/helpers": "^1.2",
+        "laravel/passport": "^8.0",
         "laravel/tinker": "^1.0",
         "laravolt/avatar": "^2.0",
         "predis/predis": "^1.1"
